--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_ZXCDDCSLC/CL_ZXCDDCSLC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_ZXCDDCSLC/CL_ZXCDDCSLC.cshtml
@@ -85,11 +85,11 @@
             <div id="divGQ" class="divFWCZ">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">供求</span>
+                    <span class="spanFWCZ">身份</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让</label>
-                    <img class="iFWCZ" id="imgSJHS" /><label class="labelFWCZ">&nbsp;&nbsp;商家回收&nbsp;&nbsp;</label>
+                    <img class="iFWCZ" id="imgGRZR" /><label class="labelFWCZ">&nbsp;&nbsp;个人转让</label>
+                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让&nbsp;&nbsp;</label>
                 </div>
             </div>
             <div id="divJDLB" class="divFWCZ" style="z-index: 999">
@@ -116,106 +116,58 @@
                     </div>
                 </div>
             </div>
-            <div id="divDSXXCS" class="divFWCZ" style="z-index: 998; display: none;">
+            <div id="divZXCXXCS" class="divFWCZ" style="z-index: 998; display: none;">
                 <div class="divLeft" style="margin-left: 160px;">
                     <span class="required">&nbsp;</span>
                     <span class="spanFWCZ"></span>
                 </div>
                 <div class="divRight">
-                    <div id="divDSPMCCText" class="spanFWLXOut SRK" style="position: relative;">
+                    <div id="divZXCPPText" class="spanFWLXOut SRK" style="position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanDSPMCC" class="spanFWQK spanFontColor" style="margin-top: 0">屏幕尺寸</span>
+                            <span id="spanZXCPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divDSPMCC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divZXCPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDSPPText" class="spanFWLXOut SRK" style="position: relative;">
+                    <div id="divCCText" class="spanFWLXOut SRK" style="position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanDSPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <span id="spanCC" class="spanFWQK spanFontColor" style="margin-top: 0">尺寸</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divDSPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divCC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="divXYJXXCS" class="divFWCZ" style="z-index: 997; display: none;">
+            <div id="divDDCXXCS" class="divFWCZ" style="z-index: 998; display: none;">
                 <div class="divLeft" style="margin-left: 160px;">
                     <span class="required">&nbsp;</span>
                     <span class="spanFWCZ"></span>
                 </div>
                 <div class="divRight">
-                    <div id="divXYJPPText" class="spanFWLXOut SRK" style="position: relative;">
+                    <div id="divDDCPPText" class="spanFWLXOut SRK" style="position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanXYJPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <span id="spanDDCPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divXYJPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divDDCPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                </div>
-            </div>
-            <div id="divKTXXCS" class="divFWCZ" style="z-index: 996; display: none;">
-                <div class="divLeft" style="margin-left: 160px;">
-                    <span class="required">&nbsp;</span>
-                    <span class="spanFWCZ"></span>
-                </div>
-                <div class="divRight">
-                    <div id="divKTPPText" class="spanFWLXOut SRK" style="position: relative;">
+                    <div id="divDCDYText" class="spanFWLXOut SRK" style="position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanKTPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <span id="spanDCDY" class="spanFWQK spanFontColor" style="margin-top: 0">电池电压</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divKTPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divDCDY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divKTBPDSText" class="spanFWLXOut SRK" style="position: relative;">
+                    <div id="divDCRLText" class="spanFWLXOut SRK" style="position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanKTBPDS" class="spanFWQK spanFontColor" style="margin-top: 0">变频/定速</span>
+                            <span id="spanDCRL" class="spanFWQK spanFontColor" style="margin-top: 0">电池容量</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divKTBPDS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <div id="divKTGLText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanKTGL" class="spanFWQK spanFontColor" style="margin-top: 0">功率</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divKTGL" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="divBXXXCS" class="divFWCZ" style="z-index: 995; display: none;">
-                <div class="divLeft" style="margin-left: 160px;">
-                    <span class="required">&nbsp;</span>
-                    <span class="spanFWCZ"></span>
-                </div>
-                <div class="divRight">
-                    <div id="divBXPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanBXPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divBXPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="divBGXXCS" class="divFWCZ" style="z-index: 994; display: none;">
-                <div class="divLeft" style="margin-left: 160px;">
-                    <span class="required">&nbsp;</span>
-                    <span class="spanFWCZ"></span>
-                </div>
-                <div class="divRight">
-                    <div id="divBGPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanBGPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divBGPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divDCRL" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
@@ -235,6 +187,19 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div id="divSYNX" class="divFWCZ" style="z-index: 992;">
+                <div class="divLeft" style="margin-left: 102px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">使用年限</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanSYNX" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="SYNX" maxlength="9" column="SYNX" type="text" style="width: 100px" />
+                        <span class="spanFontColor">年</span>
+                    </span>
+                </div>
+                <div id="divSYNXTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divJG" class="divFWCZ" style="z-index: 992;">
                 <div class="divLeft" style="margin-left: 102px;">
