--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_MTC/CL_MTC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_MTC/CL_MTC.cshtml
@@ -124,24 +124,47 @@
                     </div>
                 </div>
             </div>
-            <div id="divXJCD" class="divFWCZ" style="z-index: 997;">
-                <div class="divLeft" style="margin-left: 128px;">
+            <div id="divXSLC" class="divFWCZ" style="z-index: 997;">
+                <div class="divLeft" style="margin-left: 102px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">新旧</span>
+                    <span class="spanFWCZ">行驶里程</span>
                 </div>
                 <div class="divRight">
-                    <div id="divXJText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <img class="iFWCZ" id="imgXCWXS" /><label class="labelFWCZ">&nbsp;&nbsp;新车未行使</label>
+                    <img class="iFWCZ" id="imgYXS" /><label class="labelFWCZ">&nbsp;&nbsp;已行使&nbsp;&nbsp;</label>
+                </div>
+            </div>
+            <div id="divGLS" class="divFWCZ" style="z-index: 996; display: none;">
+                <div class="divLeft" style="margin-left: 115px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">公里数</span>
+                </div>
+                <div class="divRight">
+                    <span id="spanGLS" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="GLS" maxlength="9" column="GLS" type="text" style="width: 80px" />
+                        <span class="spanFontColor">公里</span>
+                    </span>
+                </div>
+                <div id="divGLSTip" class="Warn" style="z-index: 995; position: relative;"></div>
+            </div>
+            <div id="divMTCGCSJ" class="divFWCZ" style="z-index: 994; display: none;">
+                <div class="divLeft" style="margin-left: 101px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">购车时间</span>
+                </div>
+                <div class="divRight">
+                    <div id="divGCSJText" class="spanFWLXOut SRK" style="position: relative;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanXJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择新旧</span>
+                            <span id="spanGCSJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择购车时间</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divXJ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divGCSJ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="divJG" class="divFWCZ" style="z-index: 995;">
-                <div class="divLeft" style="margin-left: 102px;">
+            <div id="divJG" class="divFWCZ" style="z-index: 993;">
+                <div class="divLeft" style="margin-left: 101px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">转让价格</span>
                 </div>
@@ -153,8 +176,8 @@
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 995; position: relative;"></div>
             </div>
-            <div id="divJYDD" class="divFWCZ" style="z-index: 994;">
-                <div class="divLeft" style="margin-left: 102px;">
+            <div id="divJYDD" class="divFWCZ" style="z-index: 992;">
+                <div class="divLeft" style="margin-left: 101px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">交易地点</span>
                 </div>
