--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_GCC/CL_GCC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_GCC/CL_GCC.cshtml
@@ -130,7 +130,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divCCNXText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divCCNXSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanCCNX" class="spanFWQK spanFontColor" style="margin-top: 0">请选择出厂年限</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                     <div id="divCCYFText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divCCYFSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanCCYF" class="spanFWQK spanFontColor" style="margin-top: 0">请选择出厂月份</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -193,19 +193,20 @@
                 </div>
                 <div class="divRight">
                     <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
+                    <div id="divDDText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divDDSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDD" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divSQ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divDD" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
