--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_ZXCDDCSLC/CL_ZXCDDCSLC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_ZXCDDCSLC/CL_ZXCDDCSLC.cshtml
@@ -99,7 +99,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div id="divXLText" class="spanFWLXOut SRK">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divZXCPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanZXCPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div id="divCCText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divCCSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanCC" class="spanFWQK spanFontColor" style="margin-top: 0">尺寸</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divDDCPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divDDCPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanDDCPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div id="divDCDYText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divDCDYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanDCDY" class="spanFWQK spanFontColor" style="margin-top: 0">电池电压</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div id="divDCRLText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divDCRLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanDCRL" class="spanFWQK spanFontColor" style="margin-top: 0">电池容量</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divXJText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXJSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择新旧</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -221,19 +221,20 @@
                 </div>
                 <div class="divRight">
                     <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
+                    <div id="divDDText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divDDSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDD" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divSQ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divDD" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
