--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_QTES_CRYP/ES_QTES_CRYP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_QTES_CRYP/ES_QTES_CRYP.cshtml
@@ -99,7 +99,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -107,43 +107,11 @@
                         </div>
                     </div>
                     <div id="divXLText" class="spanFWLXOut SRK">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divXL" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="divFZXXCS" class="divFWCZ" style="z-index: 998; display: none;">
-                <div class="divLeft" style="margin-left: 160px;">
-                    <span class="required">&nbsp;</span>
-                    <span class="spanFWCZ"></span>
-                </div>
-                <div class="divRight">
-                    <div id="divFZCCText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanFZCC" class="spanFWQK spanFontColor" style="margin-top: 0">尺寸</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divFZCC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="divXXXCS" class="divFWCZ" style="z-index: 997; display: none;">
-                <div class="divLeft" style="margin-left: 160px;">
-                    <span class="required">&nbsp;</span>
-                    <span class="spanFWCZ"></span>
-                </div>
-                <div class="divRight">
-                    <div id="divXCCText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanXCC" class="spanFWQK spanFontColor" style="margin-top: 0">尺寸</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divXCC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
@@ -168,19 +136,20 @@
                 </div>
                 <div class="divRight">
                     <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
+                    <div id="divDDText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divDDSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDD" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divSQ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divDD" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
