--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_JDJJBG_ESJD/ES_JDJJBG_ESJD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_JDJJBG_ESJD/ES_JDJJBG_ESJD.cshtml
@@ -99,7 +99,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div id="divXLText" class="spanFWLXOut SRK">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divDSPMCCText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divDSPMCCSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanDSPMCC" class="spanFWQK spanFontColor" style="margin-top: 0">屏幕尺寸</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div id="divDSPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divDSPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanDSPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divXYJPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXYJPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXYJPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divKTPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divKTPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanKTPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div id="divKTBPDSText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divKTBPDSSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanKTBPDS" class="spanFWQK spanFontColor" style="margin-top: 0">变频/定速</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div id="divKTGLText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divKTGLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanKTGL" class="spanFWQK spanFontColor" style="margin-top: 0">功率</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -195,7 +195,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divBXPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divBXPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanBXPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divBGPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divBGPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanBGPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divXJText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXJSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择新旧</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -256,19 +256,20 @@
                 </div>
                 <div class="divRight">
                     <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
+                    <div id="divDDText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divDDSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDD" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divSQ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divDD" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
