--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_TSJ/ES_SJSM_TSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_TSJ/ES_SJSM_TSJ.cshtml
@@ -99,7 +99,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divLBText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divLBSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanLB" class="spanFWQK spanFontColor" style="margin-top: 0">请选择类别</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div id="divXLText" class="spanFWLXOut SRK">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXLSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divCPUPPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divCPUPPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanCPUPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择CPU品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div id="divCPUHSText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divCPUHSSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanCPUHS" class="spanFWQK spanFontColor" style="margin-top: 0">请选择CPU核数</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div id="divNCText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divNCSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanNC" class="spanFWQK spanFontColor" style="margin-top: 0">请选择内存</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divYPText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divYPSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanYP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择硬盘</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div id="divPMCCText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divPMCCSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanPMCC" class="spanFWQK spanFontColor" style="margin-top: 0">请选择屏幕尺寸</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div id="divXKText" class="spanFWLXOut SRK" style="position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXKSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXK" class="spanFWQK spanFontColor" style="margin-top: 0">请选择显卡</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -187,7 +187,7 @@
                 </div>
                 <div class="divRight">
                     <div id="divXJText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divXJSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
                             <span id="spanXJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择新旧</span>
                             <div class="divFWQKArrow"></div>
                         </div>
@@ -216,19 +216,20 @@
                 </div>
                 <div class="divRight">
                     <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                        <div id="divQYSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
+                    <div id="divDDText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div id="divDDSpan" class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDD" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divSQ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divDD" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
